--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
 		"postcss-safe-parser": "4.0.2",
 		"prettier": "^2.8.7",
 		"storybook-addon-performance": "^0.17.1",
-		"stylelint": "^14.16.1",
+		"stylelint": "^15.3.0",
+		"stylelint-config-standard": "^31.0.0",
+		"stylelint-order": "^6.0.3",
 		"typescript": "^4.9.5",
 		"vitest": "^0.29.8",
 		"vitest-axe": "^0.1.0"
@@ -78,6 +80,6 @@
 		"workerDirectory": "public"
 	},
 	"engines": {
-		"node": "~18.12.0"
+		"node": "^18.12.0"
 	}
 }
