--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build:next": "next build",
 		"build": "next build && npm run build-storybook",
+		"build:next": "next build",
+		"build-storybook": "storybook build",
 		"start": "next start -p ${PORT:=3000}",
 		"lint": "run-p lint:*",
 		"lint:next": "next lint",
@@ -14,8 +15,7 @@
 		"lint:ts": "tsc -p tsconfig.json --noEmit",
 		"format": "prettier \"*/**/*.{js,jsx,ts,tsx,json,md,css,scss}\" --write",
 		"formatw": "prettier \"{,!(node_modules)/**/}*.js\"",
-		"storybook": "start-storybook -s public -p 6006",
-		"build-storybook": "build-storybook -o public/storybook",
+		"storybook": "storybook dev -p 6006",
 		"prepare": "husky install",
 		"test": "vitest",
 		"test:ci": "vitest run",
@@ -23,53 +23,57 @@
 	},
 	"dependencies": {
 		"clsx": "^1.2.1",
-		"next": "^13.3.0",
+		"next": "^13.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@axe-core/react": "^4.6.1",
 		"@commitlint/cli": "^17.6.1",
-		"@commitlint/config-conventional": "^17.4.4",
-		"@storybook/addon-a11y": "^6.5.16",
-		"@storybook/addon-actions": "^6.5.16",
-		"@storybook/addon-essentials": "^6.5.16",
-		"@storybook/addon-interactions": "^6.5.16",
-		"@storybook/addon-links": "^6.5.16",
-		"@storybook/addon-postcss": "^2.0.0",
-		"@storybook/builder-webpack5": "^6.5.16",
-		"@storybook/manager-webpack5": "^6.5.16",
-		"@storybook/react": "^6.5.16",
+		"@commitlint/config-conventional": "^17.6.1",
+		"@storybook/addon-a11y": "^7.0.7",
+		"@storybook/addon-essentials": "^7.0.7",
+		"@storybook/addon-interactions": "^7.0.7",
+		"@storybook/addon-links": "^7.0.7",
+		"@storybook/blocks": "^7.0.7",
+		"@storybook/builder-webpack5": "^7.0.7",
+		"@storybook/nextjs": "^7.0.7",
+		"@storybook/react": "^7.0.7",
+		"@storybook/testing-library": "^0.1.1-future.0",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest-axe": "^3.5.5",
-		"@types/node": "^18.15.11",
+		"@types/node": "^18.16.1",
 		"@types/react": "^18.2.0",
-		"@types/react-dom": "^18.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.58.0",
-		"@typescript-eslint/parser": "^5.58.0",
-		"@vitejs/plugin-react": "^3.1.0",
+		"@types/react-dom": "^18.2.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
+		"@vitejs/plugin-react": "^4.0.0",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.38.0",
-		"eslint-config-next": "^13.3.0",
+		"eslint": "^8.39.0",
+		"eslint-config-next": "^13.3.1",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-storybook": "^0.6.11",
 		"husky": "^8.0.3",
 		"hygen": "^6.2.11",
 		"jsdom": "^21.1.1",
-		"lint-staged": "^13.2.1",
+		"lint-staged": "^13.2.2",
 		"msw": "^1.2.1",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.23",
 		"postcss-loader": "^7.2.4",
-		"postcss-preset-env": "^8.3.1",
+		"postcss-preset-env": "^8.3.2",
 		"postcss-safe-parser": "4.0.2",
-		"prettier": "^2.8.7",
+		"prettier": "^2.8.8",
+		"storybook": "^7.0.7",
 		"storybook-addon-performance": "^0.17.1",
-		"stylelint": "^15.4.0",
-		"stylelint-config-standard": "^32.0.0",
+		"storybook-css-modules": "^1.0.8",
+		"stylelint": "^15.6.0",
+		"stylelint-config-standard": "^33.0.0",
 		"stylelint-order": "^6.0.3",
-		"typescript": "^4.9.5",
+		"typescript": "^5.0.4",
 		"vitest": "^0.30.1",
 		"vitest-axe": "^0.1.0"
 	},
