--- a/package.json
+++ b/package.json
@@ -23,39 +23,39 @@
 	},
 	"dependencies": {
 		"clsx": "^1.2.1",
-		"next": "^13.3.4",
+		"next": "^13.4.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
-		"@axe-core/react": "^4.7.0",
-		"@commitlint/cli": "^17.6.1",
-		"@commitlint/config-conventional": "^17.6.1",
-		"@storybook/addon-a11y": "^7.0.7",
-		"@storybook/addon-essentials": "^7.0.7",
-		"@storybook/addon-interactions": "^7.0.7",
-		"@storybook/addon-links": "^7.0.7",
-		"@storybook/blocks": "^7.0.7",
-		"@storybook/builder-webpack5": "^7.0.7",
-		"@storybook/nextjs": "^7.0.7",
-		"@storybook/react": "^7.0.7",
-		"@storybook/testing-library": "^0.1.1--canary.38.840cd30.0",
+		"@axe-core/react": "^4.7.1",
+		"@commitlint/cli": "^17.6.3",
+		"@commitlint/config-conventional": "^17.6.3",
+		"@storybook/addon-a11y": "^7.0.14",
+		"@storybook/addon-essentials": "^7.0.14",
+		"@storybook/addon-interactions": "^7.0.14",
+		"@storybook/addon-links": "^7.0.14",
+		"@storybook/blocks": "^7.0.14",
+		"@storybook/builder-webpack5": "^7.0.14",
+		"@storybook/nextjs": "^7.0.14",
+		"@storybook/react": "^7.0.14",
+		"@storybook/testing-library": "^0.1.1-future.2",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest-axe": "^3.5.5",
-		"@types/node": "^18.16.3",
-		"@types/react": "^18.2.0",
-		"@types/react-dom": "^18.2.1",
-		"@typescript-eslint/eslint-plugin": "^5.59.2",
-		"@typescript-eslint/parser": "^5.59.2",
+		"@types/node": "^20.2.3",
+		"@types/react": "^18.2.6",
+		"@types/react-dom": "^18.2.4",
+		"@typescript-eslint/eslint-plugin": "^5.59.7",
+		"@typescript-eslint/parser": "^5.59.7",
 		"@vitejs/plugin-react": "^4.0.0",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.39.0",
-		"eslint-config-next": "^13.3.4",
+		"eslint": "^8.41.0",
+		"eslint-config-next": "^13.4.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-storybook": "^0.6.11",
+		"eslint-plugin-storybook": "^0.6.12",
 		"husky": "^8.0.3",
 		"hygen": "^6.2.11",
 		"jsdom": "^22.0.0",
@@ -64,17 +64,17 @@
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.23",
 		"postcss-loader": "^7.3.0",
-		"postcss-preset-env": "^8.3.2",
+		"postcss-preset-env": "^8.4.1",
 		"postcss-safe-parser": "4.0.2",
 		"prettier": "^2.8.8",
-		"storybook": "^7.0.7",
+		"storybook": "^7.0.14",
 		"storybook-addon-performance": "^0.17.1",
 		"storybook-css-modules": "^1.0.8",
-		"stylelint": "^15.6.1",
+		"stylelint": "^15.6.2",
 		"stylelint-config-standard": "^33.0.0",
 		"stylelint-order": "^6.0.3",
 		"typescript": "^5.0.4",
-		"vitest": "^0.30.1",
+		"vitest": "^0.31.1",
 		"vitest-axe": "^0.1.0"
 	},
 	"peerDependencies": {
@@ -84,6 +84,6 @@
 		"workerDirectory": "public"
 	},
 	"engines": {
-		"node": "^18.12.0"
+		"node": ">=18 <=20"
 	}
 }
