--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build && npm run build-storybook",
+		"build": "next build && npm run build:storybook",
 		"build:next": "next build",
-		"build-storybook": "storybook build",
+		"build:storybook": "storybook build -o public/storybook",
 		"start": "next start -p ${PORT:=3000}",
 		"lint": "run-p lint:*",
 		"lint:next": "next lint",
@@ -23,58 +23,58 @@
 	},
 	"dependencies": {
 		"clsx": "^1.2.1",
-		"next": "^13.4.3",
+		"next": "^13.4.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@axe-core/react": "^4.7.1",
-		"@commitlint/cli": "^17.6.3",
-		"@commitlint/config-conventional": "^17.6.3",
-		"@storybook/addon-a11y": "^7.0.14",
-		"@storybook/addon-essentials": "^7.0.14",
-		"@storybook/addon-interactions": "^7.0.14",
-		"@storybook/addon-links": "^7.0.14",
-		"@storybook/blocks": "^7.0.14",
-		"@storybook/builder-webpack5": "^7.0.14",
-		"@storybook/nextjs": "^7.0.14",
-		"@storybook/react": "^7.0.14",
+		"@commitlint/cli": "^17.6.5",
+		"@commitlint/config-conventional": "^17.6.5",
+		"@storybook/addon-a11y": "^7.0.18",
+		"@storybook/addon-essentials": "^7.0.18",
+		"@storybook/addon-interactions": "^7.0.18",
+		"@storybook/addon-links": "^7.0.18",
+		"@storybook/blocks": "^7.0.18",
+		"@storybook/builder-webpack5": "^7.0.18",
+		"@storybook/nextjs": "^7.0.18",
+		"@storybook/react": "^7.0.18",
 		"@storybook/testing-library": "^0.1.1-future.2",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest-axe": "^3.5.5",
-		"@types/node": "^20.2.3",
-		"@types/react": "^18.2.6",
+		"@types/node": "^20.2.5",
+		"@types/react": "^18.2.7",
 		"@types/react-dom": "^18.2.4",
-		"@typescript-eslint/eslint-plugin": "^5.59.7",
-		"@typescript-eslint/parser": "^5.59.7",
+		"@typescript-eslint/eslint-plugin": "^5.59.8",
+		"@typescript-eslint/parser": "^5.59.8",
 		"@vitejs/plugin-react": "^4.0.0",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.41.0",
-		"eslint-config-next": "^13.4.3",
+		"eslint-config-next": "^13.4.4",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-storybook": "^0.6.12",
 		"husky": "^8.0.3",
 		"hygen": "^6.2.11",
-		"jsdom": "^22.0.0",
+		"jsdom": "^22.1.0",
 		"lint-staged": "^13.2.2",
 		"msw": "^1.2.1",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.23",
-		"postcss-loader": "^7.3.0",
+		"postcss": "^8.4.24",
+		"postcss-loader": "^7.3.2",
 		"postcss-preset-env": "^8.4.1",
 		"postcss-safe-parser": "4.0.2",
 		"prettier": "^2.8.8",
-		"storybook": "^7.0.14",
+		"storybook": "^7.0.18",
 		"storybook-addon-performance": "^0.17.1",
 		"storybook-css-modules": "^1.0.8",
 		"stylelint": "^15.6.2",
 		"stylelint-config-standard": "^33.0.0",
 		"stylelint-order": "^6.0.3",
 		"typescript": "^5.0.4",
-		"vitest": "^0.31.1",
+		"vitest": "^0.31.2",
 		"vitest-axe": "^0.1.0"
 	},
 	"peerDependencies": {
