--- a/package.json
+++ b/package.json
@@ -22,57 +22,59 @@
 		"new": "cross-env HYGEN_TMPLS=generators hygen new"
 	},
 	"dependencies": {
-		"clsx": "^1.2.1",
-		"next": "^13.4.8",
+		"clsx": "^2.0.0",
+		"next": "^13.4.12",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@axe-core/react": "^4.7.3",
-		"@commitlint/cli": "^17.6.6",
-		"@commitlint/config-conventional": "^17.6.6",
-		"@storybook/addon-a11y": "^7.0.26",
-		"@storybook/addon-essentials": "^7.0.26",
-		"@storybook/addon-interactions": "^7.0.26",
-		"@storybook/addon-links": "^7.0.26",
-		"@storybook/blocks": "^7.0.26",
-		"@storybook/nextjs": "^7.0.26",
+		"@commitlint/cli": "^17.6.7",
+		"@commitlint/config-conventional": "^17.6.7",
+		"@storybook/addon-a11y": "^7.2.0",
+		"@storybook/addon-essentials": "^7.2.0",
+		"@storybook/addon-interactions": "^7.2.0",
+		"@storybook/addon-links": "^7.2.0",
+		"@storybook/blocks": "^7.2.0",
+		"@storybook/nextjs": "^7.2.0",
 		"@storybook/testing-library": "^0.2.0",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest-axe": "^3.5.5",
-		"@types/node": "^20.3.3",
-		"@types/react": "^18.2.14",
-		"@types/react-dom": "^18.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.61.0",
-		"@typescript-eslint/parser": "^5.61.0",
-		"@vitejs/plugin-react": "^4.0.1",
+		"@types/node": "^20.4.5",
+		"@types/react": "^18.2.18",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.2.1",
+		"@typescript-eslint/parser": "^6.2.1",
+		"@vitejs/plugin-react": "^4.0.4",
+		"@vitest/coverage-v8": "^0.34.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.44.0",
-		"eslint-config-next": "^13.4.8",
+		"eslint": "^8.46.0",
+		"eslint-config-next": "^13.4.12",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react": "^7.33.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-storybook": "^0.6.12",
+		"eslint-plugin-storybook": "^0.6.13",
 		"husky": "^8.0.3",
 		"hygen": "^6.2.11",
 		"jsdom": "^22.1.0",
 		"lint-staged": "^13.2.3",
-		"msw": "^1.2.2",
+		"msw": "^1.2.3",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.24",
+		"postcss": "^8.4.27",
 		"postcss-loader": "^7.3.3",
-		"postcss-preset-env": "^9.0.0",
+		"postcss-preset-env": "^9.1.0",
 		"postcss-safe-parser": "4.0.2",
-		"prettier": "^2.8.8",
-		"storybook": "^7.0.26",
+		"prettier": "^3.0.0",
+		"storybook": "^7.2.0",
 		"storybook-addon-performance": "^0.17.1",
 		"storybook-css-modules": "^1.0.8",
-		"stylelint": "^15.10.0",
+		"stylelint": "^15.10.2",
 		"stylelint-config-standard": "^34.0.0",
 		"stylelint-order": "^6.0.3",
 		"typescript": "^5.1.6",
-		"vitest": "^0.32.4",
+		"vite-tsconfig-paths": "^4.2.0",
+		"vitest": "^0.34.1",
 		"vitest-axe": "^0.1.0"
 	},
 	"peerDependencies": {
