--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build && npm run build:storybook",
+		"build": "next build",
 		"build:next": "next build",
-		"build:storybook": "storybook build -o public/storybook",
 		"start": "next start -p ${PORT:=3000}",
 		"lint": "run-p lint:*",
 		"lint:next": "next lint",
@@ -15,7 +14,6 @@
 		"lint:ts": "tsc -p tsconfig.json --noEmit",
 		"format": "prettier \"*/**/*.{js,jsx,ts,tsx,json,md,css,scss}\" --write",
 		"formatw": "prettier \"{,!(node_modules)/**/}*.js\"",
-		"storybook": "storybook dev -p 6006",
 		"prepare": "husky install",
 		"test": "vitest",
 		"test:ci": "vitest run",
@@ -31,13 +29,6 @@
 		"@axe-core/react": "^4.7.3",
 		"@commitlint/cli": "^17.7.2",
 		"@commitlint/config-conventional": "^17.7.0",
-		"@storybook/addon-a11y": "^7.4.6",
-		"@storybook/addon-essentials": "^7.4.6",
-		"@storybook/addon-interactions": "^7.4.6",
-		"@storybook/addon-links": "^7.4.6",
-		"@storybook/blocks": "^7.4.6",
-		"@storybook/nextjs": "^7.4.6",
-		"@storybook/testing-library": "^0.2.2",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.5.1",
 		"@types/jest-axe": "^3.5.6",
@@ -54,7 +45,6 @@
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-storybook": "^0.6.15",
 		"husky": "^8.0.3",
 		"hygen": "^6.2.11",
 		"jsdom": "^22.1.0",
@@ -66,9 +56,6 @@
 		"postcss-preset-env": "^9.2.0",
 		"postcss-safe-parser": "4.0.2",
 		"prettier": "^3.0.3",
-		"storybook": "^7.4.6",
-		"storybook-addon-performance": "^0.17.1",
-		"storybook-css-modules": "^1.0.8",
 		"stylelint": "^15.10.3",
 		"stylelint-config-standard": "^34.0.0",
 		"stylelint-order": "^6.0.3",
